--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'org.springframework.boot' version '2.6.6'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
 
@@ -6,9 +8,13 @@ repositories {
     mavenCentral()
 }
 
+bootJar.enabled = false
+
 subprojects {
     apply plugin: 'java'
     apply plugin: 'java-library'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
 
     group 'me.jsj'
     version '0.0.1-SNAPSHOT'
@@ -19,8 +25,8 @@ subprojects {
     }
 
     dependencies {
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+        implementation 'org.springframework.boot:spring-boot-starter'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
 
     test {
